# sansqritR

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.sh  package.json  precompute.py
.github/workflows/: ci.yml
crates/sansqrit-biology/: Cargo.toml
crates/sansqrit-biology/src/: lib.rs
crates/sansqrit-chemistry/: Cargo.toml
crates/sansqrit-chemistry/src/: lib.rs
crates/sansqrit-core/: Cargo.toml
crates/sansqrit-core/src/: advanced_engines.rs  algorithms.rs  applications.rs  backend_planner.rs  circuit_library.rs  circuits.rs  complex.rs  conformance.rs  distributed.rs  engine.rs  external.rs  gates.rs  gpu.rs  lib.rs  lookup.rs  measurement.rs  mitigation.rs  openqasm3_import.rs  provider.rs  qasm_export.rs  qec.rs  qec_pipeline.rs  sharding.rs  sparse.rs  stabilizer.rs  tensor_engines.rs  transpiler.rs
crates/sansqrit-genetics/: Cargo.toml
crates/sansqrit-genetics/src/: lib.rs
crates/sansqrit-lang/: Cargo.toml
crates/sansqrit-lang/src/: ast.rs  interpreter.rs  lexer.rs  main.rs  parser.rs
crates/sansqrit-math/: Cargo.toml
crates/sansqrit-math/src/: lib.rs
crates/sansqrit-medical/: Cargo.toml
crates/sansqrit-medical/src/: lib.rs
crates/sansqrit-ml/: Cargo.toml
crates/sansqrit-ml/src/: lib.rs
crates/sansqrit-physics/: Cargo.toml
crates/sansqrit-physics/src/: lib.rs
crates/sansqrit-qasm/: Cargo.toml
crates/sansqrit-qasm/src/: lib.rs
crates/sansqrit-stdlib/: Cargo.toml
crates/sansqrit-stdlib/src/: algorithms.rs  lib.rs
docs/: dsl-syntax.html  industry-gap-analysis.md  sansqrit-programs.html
precomputed/: circuit_identities.json  gate_matrices.json  grover_table.json  molecular_energies.json  molecule_hamiltonians.json  noise_kraus.json  pauli_table.json  qft_matrices.json
public/: index.html
public/css/: style.css
public/js/: app.js  canvas.js  palette.js  properties.js
quantum_engine/: Cargo.toml
quantum_engine/src/: lib.rs
samples/: backend_planning.sq  circuit_library.sq  ghz_100.sq  grover.sq  hello.sq  industry_backend_functions.sq  pro_quantum_workflow.sq  production_execution_pipeline.sq  quantum_challenge_assessment.sq  sparse_120.sq  vqe_h2.sq
src/blocks/: registry.js  registry_extra.js  registry_extra_b.js
src/dsl/: interpreter.js  stdlib.js
src/engine/: quantum.js  quantum_wasm.js
src/export/: circuit_export.js
src/server/: server.js
tests/: test.js  test_dsl_advanced.js
tools/precompute/: generate_blobs.py
