[workspace]
resolver = "2"
members = [
    "crates/sansqrit-core",
    "crates/sansqrit-stdlib",
    "crates/sansqrit-lang",
    "crates/sansqrit-chemistry",
    "crates/sansqrit-biology",
    "crates/sansqrit-medical",
    "crates/sansqrit-physics",
    "crates/sansqrit-genetics",
    "crates/sansqrit-ml",
    "crates/sansqrit-math",
    "crates/sansqrit-qasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/sansqrit-lang/sansqrit"
authors = ["Sansqrit Contributors"]

[workspace.dependencies]
num-complex = "0.4"
rand = "0.8"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"
csv = "1.3"
memmap2 = "0.9"
bytemuck = { version = "1.14", features = ["derive"] }
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
log = "0.4"
env_logger = "0.10"
