[package]
name        = "quantum-engine"
version     = "3.1.0"
edition     = "2021"
description = "Sanskrit Visual Builder — Rust/WASM quantum engine"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm    = ["wasm-bindgen", "js-sys", "console_error_panic_hook"]

[dependencies]
wasm-bindgen             = { version = "0.2", optional = true }
js-sys                   = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
serde                    = { version = "1", features = ["derive"] }
serde_json               = "1"
serde-wasm-bindgen       = "0.6"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
