[package]
name = "sansqrit-core"
description = "Core quantum simulation engine for Sansqrit — Dense, Sparse, and Chunked engines with O(1) lookup tables"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
num-complex = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
memmap2 = { workspace = true }
bytemuck = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
crossbeam = { workspace = true }
log = { workspace = true }
