[package]
name = "sansqrit-genetics"
description = "Sansqrit genetics package"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
sansqrit-core = { path = "../sansqrit-core", version = "0.1.0" }
num-complex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
