[package]
name = "sansqrit-physics"
description = "Sansqrit physics package"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sansqrit-core = { path = "../sansqrit-core" }
num-complex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
