[package]
name = "sansqrit-stdlib"
description = "Standard library for Sansqrit — collections, algorithms, file I/O, statistics, regex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
